--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>팀 소개 페이지</title>
+  <title>stage 팀 소개</title>
 ​
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -28,20 +28,20 @@
 </head>
 ​
 <body>
-  <h1>팀 소개 페이지</h1>
-  <h2>팀 소개 내용</h2>
+  <h1>stage 팀 소개</h1>
+  <h2>우리의 stage</h2>
 ​
   <div class="main1">
     
     <p>
-      fdsafdagagagdsafgdsafgdsafgdasg
+      여기에 팀 소개 내용이 들어갈꺼 같습니다.
     </p>
     <img src="" alt="사진첨부">
   </div>
   <div>
-    <h2>팀 소개 내용 2</h2>
+    <h2>팀의 대한 사소한 설명이 들어갈꺼 같습니다.</h2>
     <p>
-      fdafdsafdsafdsafdsafdsafdsafdsafadsfd
+      부가적인 내용들이 들어갈꺼 같습니다.
     </p>
   </div>
   <div class="images">
