--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 ​
   <style>
+    body {
+      margin-left: 10px;
+    }
     .main1 {
       display: flex;
       flex-direction: row;
