사진 추가 및 수정

--- a/index.html
+++ b/index.html
@@ -1,79 +1,78 @@
 <!DOCTYPE html>
 <html lang="ko">
 ​
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>stage 팀 소개</title>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-​
+  ​
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-​
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  ​
   <style>
     body {
       margin-left: 10px;
     }
+
     h1 {
       display: flex;
       justify-content: center;
     }
+
     h2 {
       display: flex;
       justify-content: center;
     }
+
     .main1 {
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: space-around;
-​
+      ​
     }
+
     .images {
       margin: 50px auto 0px auto;
-​
-      display: flex;
+      ​ display: flex;
       align-items: center;
       justify-content: center;
     }
   </style>
 
   <script type="module">
-     $("#storybtn").click(async function () {
-            $('#story').toggle();
-        })
+
   </script>
 </head>
 ​
+
 <body>
-  <h1>stage 팀 소개</h1>
-  <h2>우리의 stage</h2>
-​
   <div class="main1">
     <img src="" alt="사진첨부">
-    <p>
-      여기에 팀 소개 내용이 들어갈꺼 같습니다.
-    </p>
+    <span>
+      <h1>stage 팀 소개</h1>
+      <h2>우리의 stage</h2>
+      <p>
+        여기에 팀 소개 내용이 들어갈꺼 같습니다.
+      </p>
+    </span>
   </div>
-  <div>
-    <h2>팀의 대한 사소한 설명이 들어갈꺼 같습니다.</h2>
-    <p>
-      부가적인 내용들이 들어갈꺼 같습니다.
-    </p>
-  </div>
-  <button id="storybtn" type="button" class="btn btn-outline-primary">우리들의 이야기</button>
+
   <div id="story" class="images">
     <div class="row row-cols-1 row-cols-md-5 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="사진.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">정해준</h5>
+            <p class="card-text">좀 성격이 안 좋아 보일 수도 있지만 좋게 봐주시길 바라겠습니다.</p>
           </div>
           <div class="card-footer">
-            <small class="text-body-secondary">Last updated 3 mins ago</small>
+            <small class="text-body-secondary">
+              <a href="https://velog.io/@decidedcard">개인 블로그</a></small>
           </div>
         </div>
       </div>
@@ -94,7 +93,8 @@
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This card has even longer content than the first to show that equal height action.</p>
           </div>
           <div class="card-footer">
             <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -106,7 +106,8 @@
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This card has even longer content than the first to show that equal height action.</p>
           </div>
           <div class="card-footer">
             <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -118,7 +119,8 @@
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This card has even longer content than the first to show that equal height action.</p>
           </div>
           <div class="card-footer">
             <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -127,7 +129,11 @@
       </div>
     </div>
   </div>
-  
+
+  <div>
+
+  </div>
+
 </body>
-​
+
 </html>
