--- a/index.html
+++ b/index.html
@@ -54,9 +54,19 @@
     <img src="" alt="사진첨부">
     <span>
       <h1>stage 팀 소개</h1>
-      <h2>우리의 stage</h2>
       <p>
-        여기에 팀 소개 내용이 들어갈꺼 같습니다.
+        <a href="">블로그</a>>
+        <a href="">블로그</a>>
+        <a href="">블로그</a>>
+        <a href="">블로그</a>>
+        <a href="">블로그</a>>
+      </p>
+      <p>
+        <a href="">github</a>>
+        <a href="">github</a>>
+        <a href="">github</a>>
+        <a href="">github</a>>
+        <a href="">github</a>>
       </p>
     </span>
   </div>
@@ -64,69 +74,51 @@
   <div id="story" class="images">
     <div class="row row-cols-1 row-cols-md-5 g-4">
       <div class="col">
-        <div class="card h-100">
+        <div class="card">
           <img src="사진.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">정해준</h5>
-            <p class="card-text">좀 성격이 안 좋아 보일 수도 있지만 좋게 봐주시길 바라겠습니다.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-body-secondary">
-              <a href="https://velog.io/@decidedcard">개인 블로그</a></small>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-body-secondary">Last updated 3 mins ago</small>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-body-secondary">Last updated 3 mins ago</small>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-body-secondary">Last updated 3 mins ago</small>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card h-100">
+        <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-body-secondary">Last updated 3 mins ago</small>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 
