조 사진 첨부

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 
 <body>
   <div class="main1">
-    <img src="" alt="사진첨부">
+    <img src="2조.png" alt="사진첨부">
     <span>
       <h1>stage 팀 소개</h1>
+      <br>
       <p>
         <a href="">블로그</a>>
         <a href="">블로그</a>>
