--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@
       justify-content: center;
     }
 
-    h2 {
-      display: flex;
-      justify-content: center;
-    }
-
     .main1 {
+      margin-top: 20px;
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -50,10 +46,13 @@
 ​
 
 <body>
+
+  <h1>stage 팀 소개</h1>
+
   <div class="main1">
     <img src="2조.png" alt="사진첨부">
     <span>
-      <h1>stage 팀 소개</h1>
+      <h2>Our_stage 2조</h2>
       <br>
       <p>
         <a href="">블로그</a>>
