페이지 넘기기 추가

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: space-around;
+      justify-content: space-evenly;
       ​
     }
 
@@ -54,67 +54,60 @@
     <span>
       <h2>Our_stage 2조</h2>
       <br>
-      <p>
-        <a href="">블로그</a>>
-        <a href="">블로그</a>>
-        <a href="">블로그</a>>
-        <a href="">블로그</a>>
-        <a href="">블로그</a>>
-      </p>
-      <p>
-        <a href="">github</a>>
-        <a href="">github</a>>
-        <a href="">github</a>>
-        <a href="">github</a>>
-        <a href="">github</a>>
-      </p>
+      <p>간단한 소개</p>
     </span>
   </div>
 
   <div id="story" class="images">
     <div class="row row-cols-1 row-cols-md-5 g-4">
-      <div class="col">
+      <div class="col" id="storyCard1">
         <div class="card">
           <img src="사진.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">정해준</h5>
-            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
+              <a href="storyCard1.html">넘어가기</a>
+            </p>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col" id="storyCard2">
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
+              <a href="storyCard1.html">넘어가기</a>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col" id="storyCard3">
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
+              <a href="storyCard1.html">넘어가기</a>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col" id="storyCard4">
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
+              <a href="storyCard1.html">넘어가기</a>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col" id="storyCard5">
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
+              <a href="storyCard1.html">넘어가기</a>
           </div>
         </div>
       </div>
