--- a/index.html
+++ b/index.html
@@ -62,20 +62,23 @@
     <div class="row row-cols-1 row-cols-md-5 g-4">
       <div class="col" id="storyCard1">
         <div class="card">
-          <img src="사진.jpg" class="card-img-top" alt="...">
+          <a href="storyCard1.html">
+            <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
+          </a>
           <div class="card-body">
-            <h5 class="card-title">정해준</h5>
+            <h5 class="card-title">이름</h5>
             <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
-              <a href="storyCard1.html">넘어가기</a>
             </p>
           </div>
         </div>
       </div>
       <div class="col" id="storyCard2">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <a href="storyCard1.html">
+            <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
+          </a>
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">이름</h5>
             <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
               <a href="storyCard1.html">넘어가기</a>
           </div>
@@ -83,9 +86,11 @@
       </div>
       <div class="col" id="storyCard3">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <a href="storyCard1.html">
+            <img src="사진.jpg" class="card-img-top" alt="이미지를 누르면 연결됩니다.">
+          </a>
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">정해준</h5>
             <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
               <a href="storyCard1.html">넘어가기</a>
           </div>
@@ -93,9 +98,11 @@
       </div>
       <div class="col" id="storyCard4">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <a href="storyCard1.html">
+            <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
+          </a>
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">이름</h5>
             <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
               <a href="storyCard1.html">넘어가기</a>
           </div>
@@ -103,16 +110,18 @@
       </div>
       <div class="col" id="storyCard5">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <a href="storyCard1.html">
+            <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
+          </a>
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">이름</h5>
             <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
               <a href="storyCard1.html">넘어가기</a>
           </div>
         </div>
       </div>
     </div>
-    </div>
+  </div>
   </div>
 
   <div>
