--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
-​
+
 
 <head>
   <meta charset="UTF-8">
@@ -8,10 +8,9 @@
   <title>stage 팀 소개</title>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  ​
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  ​
+  
   <style>
     body {
       margin-left: 10px;
@@ -28,12 +27,12 @@
       flex-direction: row;
       align-items: center;
       justify-content: space-evenly;
-      ​
+      
     }
 
     .images {
       margin: 50px auto 0px auto;
-      ​ display: flex;
+      display: flex;
       align-items: center;
       justify-content: center;
     }
