--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
 
     details {
-      font-size:18x;
+      font-size:19px;
       font-weight: bold;
     }
 
@@ -80,14 +80,17 @@
         <summary>조원 이름</summary>
         <p>박강토, 김연재, 정해준, 정보연, 김형민</p>
      </details>
+     <br>
      <details>
       <summary>우리 팀만의 목표</summary>
       <p>힘을 합쳐 완성하기!</p>
    </details>
+   <br>
    <details>
     <summary>우리팀 약속</summary>
     <p>캠키기, 마이크를 이용 할 떈 부담없이 사용하기</p>
   </details>
+  <br>
   <details>
     <summary>블로그 주소</summary>
     <p>주소</p>
