코멘트 넘어가기 삭제

--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">이름</h5>
-            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
-              <a href="storyCard1.html">넘어가기</a>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
           </div>
         </div>
       </div>
@@ -128,8 +127,7 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">정해준</h5>
-            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
-              <a href="storyCard1.html">넘어가기</a>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
           </div>
         </div>
       </div>
@@ -140,8 +138,7 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">이름</h5>
-            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
-              <a href="storyCard1.html">넘어가기</a>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
           </div>
         </div>
       </div>
@@ -152,8 +149,7 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">이름</h5>
-            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
-              <a href="storyCard1.html">넘어가기</a>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
           </div>
         </div>
       </div>
