--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  
+
   <style>
     body {
       margin-left: 10px;
@@ -27,7 +27,7 @@
       flex-direction: row;
       align-items: center;
       justify-content: space-evenly;
-      
+
     }
 
     .images {
@@ -38,7 +38,7 @@
     }
 
     details {
-      font-size:18x;
+      font-size: 18x;
       font-weight: bold;
     }
 
@@ -50,8 +50,9 @@
     details summary::before {
       content: '❤️';
       display: inline-block;
-      margin-right: 5px; 
+      margin-right: 5px;
     }
+
     details div {
       padding: 10px;
       background-color: #f0f0f0;
@@ -61,6 +62,29 @@
   </style>
 
   <script type="module">
+    // Firebase SDK 라이브러리 가져오기
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+    import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+    import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+
+
+    // Firebase 구성 정보 설정
+    const firebaseConfig = {// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      apiKey: "AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ",
+      authDomain: "our-stage.firebaseapp.com",
+      projectId: "our-stage",
+      storageBucket: "our-stage.appspot.com",
+      messagingSenderId: "999213003989",
+      appId: "1:999213003989:web:774432a35de3c233c69e5c",
+      measurementId: "G-G2QMB19RVB"
+    };
+
+
+    // Firebase 인스턴스 초기화
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
 
   </script>
 </head>
@@ -74,23 +98,23 @@
     <img src="2조.png" alt="사진첨부">
     <span>
       <h2>Our_stage 2조</h2>
-      <br>  
+      <br>
       <details>
         <summary>조원 이름</summary>
         <p>박강토, 김연재, 정해준, 정보연, 김형민</p>
-     </details>
-     <details>
-      <summary>우리 팀만의 목표</summary>
-      <p>힘을 합쳐 완성하기!</p>
-   </details>
-   <details>
-    <summary>우리팀 약속</summary>
-    <p>캠키기, 마이크를 이용 할 떈 부담없이 사용하기</p>
-  </details>
-  <details>
-    <summary>블로그 주소</summary>
-    <p>주소</p>
-  </details>
+      </details>
+      <details>
+        <summary>우리 팀만의 목표</summary>
+        <p>힘을 합쳐 완성하기!</p>
+      </details>
+      <details>
+        <summary>우리팀 약속</summary>
+        <p>캠키기, 마이크를 이용 할 떈 부담없이 사용하기</p>
+      </details>
+      <details>
+        <summary>블로그 주소</summary>
+        <p>주소</p>
+      </details>
     </span>
   </div>
 
@@ -103,7 +127,8 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">이름</h5>
-            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
+            </p>
           </div>
         </div>
       </div>
@@ -114,7 +139,8 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">이름</h5>
-            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
+              <a href="storyCard1.html">넘어가기</a>
           </div>
         </div>
       </div>
@@ -125,7 +151,8 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">정해준</h5>
-            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
+              <a href="storyCard1.html">넘어가기</a>
           </div>
         </div>
       </div>
@@ -136,7 +163,8 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">이름</h5>
-            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
+              <a href="storyCard1.html">넘어가기</a>
           </div>
         </div>
       </div>
@@ -147,7 +175,8 @@
           </a>
           <div class="card-body">
             <h5 class="card-title">이름</h5>
-            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+            <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.
+              <a href="storyCard1.html">넘어가기</a>
           </div>
         </div>
       </div>
