서브 페이지 뼈대 작성

--- a/storyCard1.html
+++ b/storyCard1.html
@@ -1,1 +1,31 @@
-아무거나
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>소개하기</title>
+  <style>
+    .image {
+      display: flex;
+      justify-content: center;
+    }
+    .story {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="image">
+    <img src="사진.jpg" alt="">
+  </div>
+  <div class="story">
+    <h1>이름</h1>
+    <p>자신의 소개문</p>
+    <p>블로그</p>
+    <p>Github</p>
+  </div>
+</body>
+</html>
