--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <div id="story" class="images">
     <div class="row row-cols-1 row-cols-md-5 g-4">
       <div class="col" id="storyCard1">
-        <div class="card">
+        <div class="card card text-bg-primary mb-3">
           <a href="storyCard1.html">
             <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
           </a>
