--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <div id="story" class="images">
     <div class="row row-cols-1 row-cols-md-5 g-4">
       <div class="col" id="storyCard1">
-        <div class="card card text-bg-primary mb-3">
+        <div class="card">
           <a href="storyCard1.html">
             <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
           </a>
@@ -133,7 +133,7 @@
       </div>
       <div class="col" id="storyCard2">
         <div class="card">
-          <a href="storyCard1.html">
+          <a href="storyCard2.html">
             <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
           </a>
           <div class="card-body">
@@ -144,7 +144,7 @@
       </div>
       <div class="col" id="storyCard3">
         <div class="card">
-          <a href="storyCard1.html">
+          <a href="storyCard3.html">
             <img src="사진.jpg" class="card-img-top" alt="이미지를 누르면 연결됩니다.">
           </a>
           <div class="card-body">
@@ -155,7 +155,7 @@
       </div>
       <div class="col" id="storyCard4">
         <div class="card">
-          <a href="storyCard1.html">
+          <a href="storyCard4.html">
             <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
           </a>
           <div class="card-body">
@@ -166,7 +166,7 @@
       </div>
       <div class="col" id="storyCard5">
         <div class="card">
-          <a href="storyCard1.html">
+          <a href="storyCard5.html">
             <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
           </a>
           <div class="card-body">
