--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -6,61 +6,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>stage 팀 소개</title>
-
+  <!-- //title -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <!-- //font -->
+  <link rel="stylesheet" href="style.css">
+  <!-- //css -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- //jQuery -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <!-- //bootstrap -->
   
-  <style>
-    body {
-      margin-left: 10px;
-    }
-
-    h1 {
-      display: flex;
-      justify-content: center;
-    }
-
-    .main1 {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-evenly;
-
-    }
-
-    .images {
-      margin: 50px auto 0px auto;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    details {
-      font-size: 20px;
-      font-weight: bold;
-    }
-
-    details summary {
-      list-style: none;
-      cursor: pointer;
-    }
-
-    details summary::before {
-      content: '❤️';
-      display: inline-block;
-      margin-right: 5px;
-    }
-
-    details div {
-      padding: 10px;
-      background-color: #f0f0f0;
-      border: 1px solid #ccc;
-      margin-top: 5px;
-    }
-  </style>
 
   <script type="module">
     // Firebase SDK 라이브러리 가져오기
@@ -93,7 +51,7 @@
 
 <body>
 
-  <h1>stage 팀 소개</h1>
+  <h1 id="team-title">stage 팀 소개</h1>
 
   <div class="main1">
     <img src="2조.png" alt="사진첨부">
