--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -107,7 +107,7 @@
       <div class="col" id="storyCard3">
         <div class="card">
           <a href="storyCard3.html">
-            <img src="사진.jpg" class="card-img-top" alt="이미지를 누르면 연결됩니다.">
+            <img src="정해준사진.jpg" class="card-img-top" alt="이미지를 누르면 연결됩니다.">
           </a>
           <div class="card-body">
             <h5 class="card-title">정해준</h5>
