--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>소개하기</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- //bootstrap -->
+
   <style>
-    .image {
+    .main {
       display: flex;
-      justify-content: center;
+      justify-content: space-around;
       width: 100%;
-      height: 50vh;      
+      height: 50vh;
     }
+
     .images {
       border-radius: 20%;
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
+
     .story {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
     }
+
+    .comment {
+      width: 1200px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 50px;
+    }
   </style>
-  
+
   <script type="module">
     // Firebase SDK 라이브러리 가져오기
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
@@ -52,17 +68,38 @@
 
   </script>
 </head>
+
 <body>
-  <div class="image">
+  <div class="main">
     <a href="index.html">
-      <img class="images" src="사진.jpg" alt="이미지를 누르면 연결됩니다.">
+      <img class="images" src="정해준사진.jpg" alt="이미지를 누르면 연결됩니다.">
     </a>
+    <div class="story">
+      <h1>이름</h1>
+      <p>자신의 소개문</p>
+      <p>블로그</p>
+      <p>Github</p>
+    </div>
   </div>
-  <div class="story">
-    <h1>이름</h1>
-    <p>자신의 소개문</p>
-    <p>블로그</p>
-    <p>Github</p>
+
+  <form class="comment">
+    <div class="row">
+      <div class="col">
+        <input type="text" class="form-control" placeholder="닉네임" aria-label="First name">
+      </div>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="comment" aria-label="Last name">
+      </div>
+    <div class="col-auto">
+      <label for="inputPassword2" class="visually-hidden">Password</label>
+      <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+    </div>
+    <div class="col-auto">
+      <button type="submit" class="btn btn-primary mb-3">저장</button>
+      <button type="submit" class="btn btn-primary mb-3">취소</button>
+    </div>
   </div>
+  </form>
 </body>
+
 </html>
