--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -53,7 +53,7 @@
     <div class="main1">
       <img src="2조.png" alt="사진첨부">
       <span>
-        <h2 style="color:slateblue">Our_stage 2조</h2>
+        <h2 class="photo-title" style="color:slateblue">Our_stage 2조</h2>
         <br>
         <details>
           <summary>조원 이름</summary>
