사진 업로드

--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -82,10 +82,10 @@
         <div class="col" id="storyCard1">
           <div class="card">
             <a href="storyCard1.html">
-              <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
+              <img src="박강토사진.PNG" class="card-img-top" alt="이미지를 누르면 연결됩니다.">
             </a>
             <div class="card-body">
-              <h5 class="card-title">이름</h5>
+              <h5 class="card-title">박강토</h5>
               <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
             </div>
           </div>
@@ -96,7 +96,7 @@
               <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
             </a>
             <div class="card-body">
-              <h5 class="card-title">이름</h5>
+              <h5 class="card-title">김연재</h5>
               <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
             </div>
           </div>
@@ -118,7 +118,7 @@
               <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
             </a>
             <div class="card-body">
-              <h5 class="card-title">이름</h5>
+              <h5 class="card-title">정보연</h5>
               <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
             </div>
           </div>
@@ -129,7 +129,7 @@
               <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
             </a>
             <div class="card-body">
-              <h5 class="card-title">이름</h5>
+              <h5 class="card-title">김형민</h5>
               <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
             </div>
           </div>
