--- a/team_stage/storyCard2.html
+++ b/team_stage/storyCard2.html
@@ -55,7 +55,7 @@
 <body>
   <div class="image">
     <a href="index.html">
-      <img class="images" src="사진.jpg" alt="이미지를 누르면 연결됩니다.">
+      <img class="images" src="김연재사진.jpg" alt="이미지를 누르면 연결됩니다.">
     </a>
   </div>
   <div class="story">
