--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -93,7 +93,7 @@
         <div class="col" id="storyCard2">
           <div class="card">
             <a href="storyCard2.html">
-              <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
+              <img src="김연재사진.jpg" class="card-img-top" alt="이미지를 누르면 연결됩니다.">
             </a>
             <div class="card-body">
               <h5 class="card-title">김연재</h5>
