--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -10,36 +10,8 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- //bootstrap -->
 
-  <style>
-    .main {
-      display: flex;
-      justify-content: space-around;
-      width: 100%;
-      height: 50vh;
-    }
-
-    .images {
-      border-radius: 20%;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .story {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .comment {
-      width: 1200px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 50px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <!-- //css -->
 
   <script type="module">
     // Firebase SDK 라이브러리 가져오기
@@ -70,11 +42,11 @@
 </head>
 
 <body>
-  <div class="main">
+  <div class="cardMain">
     <a href="index.html">
-      <img class="images" src="정해준사진.jpg" alt="이미지를 누르면 연결됩니다.">
+      <img class="cardImages" src="정해준사진.jpg" alt="이미지를 누르면 연결됩니다.">
     </a>
-    <div class="story">
+    <div class="cardStory">
       <h1>이름</h1>
       <p>자신의 소개문</p>
       <p>블로그</p>
@@ -90,16 +62,22 @@
       <div class="col">
         <input type="text" class="form-control" placeholder="comment" aria-label="Last name">
       </div>
-    <div class="col-auto">
-      <label for="inputPassword2" class="visually-hidden">Password</label>
-      <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+      <div class="col-auto">
+        <label for="inputPassword2" class="visually-hidden">Password</label>
+        <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+      </div>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-primary mb-3">저장</button>
+        <button type="submit" class="btn btn-primary mb-3">취소</button>
+      </div>
     </div>
-    <div class="col-auto">
-      <button type="submit" class="btn btn-primary mb-3">저장</button>
-      <button type="submit" class="btn btn-primary mb-3">취소</button>
-    </div>
-  </div>
   </form>
+
+  <div class="commentBox">
+    <label for="staticEmail" class="col-sm-2 col-form-label">닉네임</label>
+    <div class="col-sm-10">
+      <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="comment">
+    </div>
 </body>
 
 </html>
