댓글창 초기

--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -143,12 +143,12 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="CommentInput">
     <div class="comment-box gradient-bg">
     <h2 class="comment-title">댓글을 작성해주세요!</h2>
     <form>
       <div class="form-group">
-        <label for="name">Name:</label>
+        <label for="name">Nickname:</label>
         <input type="text" id="name" name="name" placeholder="Enter your name">
       </div>
       <div class="form-group">
@@ -159,7 +159,7 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" placeholder="Enter your password">
       </div>
-      <button type="submit" class="btn-submit">Submit</button>
+      <button type="button" class="btn btn-primary">등록</button>
     </form>
   </div>
   </div>
