--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -43,43 +43,44 @@
 
 
 <body>
-    <div class="cardMain">
-      <a href="index.html">
+  <a href="index.html">❌</a>
+  <div class="cardMain">
+    <div>
       <img class="cardImages" src="정해준사진.jpg" alt="이미지를 누르면 연결됩니다.">
-      </a>
-      <div class="cardStory">
-        <h1>이름</h1>
-        <p>자신의 소개문</p>
-        <p>블로그</p>
-        <p>Github</p>
+    </div>
+    <div class="cardStory">
+      <h1>이름</h1>
+      <p>자신의 소개문</p>
+      <p>블로그</p>
+      <p>Github</p>
+    </div>
+  </div>
+
+  <form class="comment">
+    <div class="row">
+      <div class="col">
+        <input type="text" class="form-control" placeholder="닉네임" aria-label="First name">
+      </div>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="comment" aria-label="Last name">
+      </div>
+      <div class="col-auto">
+        <label for="inputPassword2" class="visually-hidden">Password</label>
+        <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+      </div>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-primary mb-3">저장</button>
+        <button type="submit" class="btn btn-primary mb-3">취소</button>
       </div>
     </div>
+  </form>
 
-    <form class="comment">
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="닉네임" aria-label="First name">
-        </div>
-        <div class="col">
-          <input type="text" class="form-control" placeholder="comment" aria-label="Last name">
-        </div>
-        <div class="col-auto">
-          <label for="inputPassword2" class="visually-hidden">Password</label>
-          <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
-        </div>
-        <div class="col-auto">
-          <button type="submit" class="btn btn-primary mb-3">저장</button>
-          <button type="submit" class="btn btn-primary mb-3">취소</button>
-        </div>
-        </div>
-    </form>
-
-    <div class="commentBox">
-      <label for="staticEmail" class="col-sm-2 col-form-label">닉네임</label>
-      <div class="col-sm-10">
-        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="comment">
-      </div>
+  <div class="commentBox">
+    <label for="staticEmail" class="col-sm-2 col-form-label">닉네임</label>
+    <div class="col-sm-10">
+      <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="comment">
     </div>
+  </div>
 
 </body>
 
