--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -86,7 +86,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">박강토</h5>
-              <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+              <p class="card-text">ENTJ</p>
             </div>
           </div>
         </div>
@@ -97,7 +97,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">김연재</h5>
-              <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+              <p class="card-text">ISTP</p>
             </div>
           </div>
         </div>
@@ -108,7 +108,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">정해준</h5>
-              <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+              <p class="card-text">ISFP</p>
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">정보연</h5>
-              <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+              <p class="card-text">ISTP</p>
             </div>
           </div>
         </div>
@@ -130,7 +130,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">김형민</h5>
-              <p class="card-text">각자 간단한 소개를 써 주시면 되겠습니다.</p>
+              <p class="card-text">INFJ</p>
             </div>
           </div>
         </div>
