--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -43,7 +43,7 @@
 
 
 <body>
-  <a href="index.html">❌</a>
+  <a href="index.html"></a>
   <div class="cardMain">
     <div>
       <img class="cardImages" src="정해준사진.jpg" alt="이미지를 누르면 연결됩니다.">
