--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -75,10 +75,16 @@
     </div>
   </form>
 
-  <div class="commentBox">
-    <label for="staticEmail" class="col-sm-2 col-form-label">닉네임</label>
-    <div class="col-sm-10">
-      <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="comment">
+  <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="col">
+      <div class="card border-info mb-3" style="max-width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">닉네임</h5>
+          <p class="card-text">comment</p>
+          <button type="button" class="btn btn-outline-warning">수정</button>
+          <button type="button" class="btn btn-outline-danger">삭제</button>
+        </div>
+      </div>
     </div>
   </div>
 
