--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -74,7 +74,7 @@
           <br>
           <details>
             <summary style="color:slateblue">우리팀 약속!</summary>
-            <p>캠키기, 마이크를 이용 할 떈 부담없이 사용하기</p>
+            <p class="cam">캠키기, 마이크를 이용 할 떈 부담없이 사용하기</p>
           </details>
         </span>
     </div>
