--- a/team_stage/storyCard1.html
+++ b/team_stage/storyCard1.html
@@ -4,26 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>소개하기</title>
-		<style>
-			.image {
-				display: flex;
-				justify-content: center;
-				width: 100%;
-				height: 50vh;
-			}
-			.images {
-				border-radius: 20%;
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-			}
-			.story {
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				align-items: center;
-			}
-		</style>
+		<link rel="stylesheet" href="sub.css" />
 
 		<script type="module">
 			// Firebase SDK 라이브러리 가져오기
