--- a/team_stage/storyCard2.html
+++ b/team_stage/storyCard2.html
@@ -1,68 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>소개하기</title>
-  <style>
-    .image {
-      display: flex;
-      justify-content: center;
-      width: 100%;
-      height: 50vh;      
-    }
-    .images {
-      border-radius: 20%;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    .story {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-  </style>
-  
-  <script type="module">
-    // Firebase SDK 라이브러리 가져오기
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-    import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-    import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-    import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>소개하기</title>
+		<link rel="stylesheet" href="sub.css" />
 
+		<script type="module">
+			// Firebase SDK 라이브러리 가져오기
+			import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
+			import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+			import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+			import { getDocs } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
 
-    // Firebase 구성 정보 설정
-    const firebaseConfig = {// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      apiKey: "AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ",
-      authDomain: "our-stage.firebaseapp.com",
-      projectId: "our-stage",
-      storageBucket: "our-stage.appspot.com",
-      messagingSenderId: "999213003989",
-      appId: "1:999213003989:web:774432a35de3c233c69e5c",
-      measurementId: "G-G2QMB19RVB"
-    };
+			// Firebase 구성 정보 설정
+			const firebaseConfig = {
+				// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+				apiKey: 'AIzaSyDcQ6Q78akg6Oo9Z2VO5APf-QQ7S7kn9DQ',
+				authDomain: 'our-stage.firebaseapp.com',
+				projectId: 'our-stage',
+				storageBucket: 'our-stage.appspot.com',
+				messagingSenderId: '999213003989',
+				appId: '1:999213003989:web:774432a35de3c233c69e5c',
+				measurementId: 'G-G2QMB19RVB',
+			};
 
-
-    // Firebase 인스턴스 초기화
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-
-  </script>
-</head>
-<body>
-  <div class="image">
-    <a href="index.html">
-      <img class="images" src="김연재사진.jpg" alt="이미지를 누르면 연결됩니다.">
-    </a>
-  </div>
-  <div class="story">
-    <h1>이름</h1>
-    <p>자신의 소개문</p>
-    <p>블로그</p>
-    <p>Github</p>
-  </div>
-</body>
+			// Firebase 인스턴스 초기화
+			const app = initializeApp(firebaseConfig);
+			const db = getFirestore(app);
+		</script>
+	</head>
+	<body>
+		<div class="image">
+			<a href="index.html">
+				<img class="images" src="김연재사진.jpg" alt="이미지를 누르면 연결됩니다." />
+			</a>
+		</div>
+		<div class="story">
+			<h1>이름</h1>
+			<p>자신의 소개문</p>
+			<p>블로그</p>
+			<p>Github</p>
+		</div>
+	</body>
 </html>
