--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -82,7 +82,7 @@
           </details>
           <br>
           <details>
-            <summary id="summary-color">우리팀 약속!</summary>
+            <summary>우리팀 약속!</summary>
             <p>캠키기, 마이크를 이용 할 떈 부담없이 사용하기</p>
           </details>
         </span>
