사진파일 화깅ㄴ

--- a/team_stage/storyCard1.html
+++ b/team_stage/storyCard1.html
@@ -45,7 +45,7 @@
   <a href="index.html">❌</a>
   <div class="cardMain">
     <div>
-      <img class="cardImages" src="박강토사진.jpg" alt="이미지를 누르면 연결됩니다." />
+      <img class="cardImages" src="박강토사진.png" alt="이미지를 누르면 연결됩니다." />
     </div>
     <div class="cardStory">
       <h1>이름</h1>
