메인페이지 css

--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -57,14 +57,14 @@
 
 <body>
   <div class="container">
-    <h1 id="team-title">stage 팀 소개</h1>
+    <h1 id="team-title" style="color:rgb(180, 198, 236)">stage 팀 소개</h1>
 
     <div class="main1">
       <div class="main1-left">
         <img src="2조.png" alt="사진첨부">
       </div>
         <span class="main1-right">
-          <h2 style="color:slateblue">Our_stage 2조</h2>
+          <h2 style="color:aliceblue">Our_stage 2조</h2>
           <br>
           <details>
             <summary>조원 이름</summary>
