--- a/team_stage/storyCard1.html
+++ b/team_stage/storyCard1.html
@@ -48,8 +48,8 @@
 			<div class="cardStory">
 				<h1>박강토</h1>
 				<p>정리와 브리핑을 잘 하는 편입니다.</p>
+				<a href="https://gidalim4u.tistory.com/">블로그</a>
 				<a href="https://github.com/gidalim/">GitHub</a>
-				<a href="https://gidalim4u.tistory.com/">Tistory</a>
 			</div>
 		</div>
 
