--- a/team_stage/storyCard3.html
+++ b/team_stage/storyCard3.html
@@ -46,10 +46,10 @@
 				<img class="cardImages" src="정해준사진.jpg" alt="이미지를 누르면 연결됩니다." />
 			</div>
 			<div class="cardStory">
-				<h1></h1>
-				<p>자신의 소개문</p>
-				<a href="xxx">블로그</a>
-				<a href="xxx">GitHub</a>
+				<h1>정해준</h1>
+				<p>경청을 잘 한다고 생각합니다.</p>
+				<a href="https://velog.io/@decidedcard">블로그</a>
+				<a href="https://github.com/DecidedCard">GitHub</a>
 			</div>
 		</div>
 
