약간의 css수정

--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -65,7 +65,7 @@
           <img src="2조.png" alt="사진첨부">
         </div>
           <span class="main1-right">
-            <h2 style="color:slateblue">Our_stage 2조</h2>
+            <h2 style="color:rgb(194, 186, 227)">Our_stage 2조</h2>
             <br>
             <details>
               <summary>조원 이름</summary>
