--- a/team_stage/storyCard5.html
+++ b/team_stage/storyCard5.html
@@ -44,7 +44,7 @@
 		<div class="cardMain">
 			<div>
 				<!-- 사진첨부 -->
-				<img class="cardImages" src="..." alt="이미지를 누르면 연결됩니다." />
+				<img id="photo" class="cardImages" src="..." alt="이미지를 누르면 연결됩니다." />
 			</div>
 			<div class="cardStory">
 				<h1>김형민</h1>
