--- a/team_stage/storyCard2.html
+++ b/team_stage/storyCard2.html
@@ -43,7 +43,7 @@
 		<a href="index.html">❌</a>
 		<div class="cardMain">
 			<div>
-				<img class="cardImages" src="김연재사진.jpg" alt="이미지를 누르면 연결됩니다." />
+				<img id="photo" class="cardImages" src="김연재사진.jpg" alt="이미지를 누르면 연결됩니다." />
 			</div>
 			<div class="cardStory">
 				<h1>김연재</h1>
