파이어베이스 cdn방식 적용

--- a/team_stage/index.html
+++ b/team_stage/index.html
@@ -20,20 +20,12 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <!-- //bootstrap -->
 
-  <script defer src="/__/firebase/10.7.1/firebase-app-compat.js"></script>
-  <script defer src="/__/firebase/10.7.1/firebase-firestore-compat.js"></script>
-  <script defer src="/__/firebase/10.7.1/firebase-storage-compat.js"></script>
-  <!-- 테스트 필요시 위의 파이어 베이스 주석처리 후 진행해주세요. -->
-
   <script type="module">
     // Firebase SDK 라이브러리 가져오기
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
     import { collection, addDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
     import { getDocs } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
-    // import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    // import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
-    // 버전 차이로 임시 주석처리
 
     // Firebase 구성 정보 설정
     const firebaseConfig = {
@@ -139,7 +131,7 @@
         <div class="col" id="storyCard5">
           <div class="card">
             <a href="storyCard5.html">
-              <img src="김형민사진.jpg" class="card-img-top" alt="이미지를 누르면 연결됩니다.">
+              <img src="..." class="card-img-top" alt="이미지를 누르면 연결됩니다.">
             </a>
             <div class="card-body">
               <h5 class="card-title">김형민</h5>
