--- a/team_stage/storyCard4.html
+++ b/team_stage/storyCard4.html
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 
-		<form class="comment">
+		<form class="comment-wrap">
 			<div class="row">
 				<div class="col">
 					<input type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
