--- a/team_stage/storyCard1.html
+++ b/team_stage/storyCard1.html
@@ -53,7 +53,7 @@
 			</div>
 		</div>
 
-		<form class="comment">
+		<form class="comment-wrap">
 			<div class="row">
 				<div class="col">
 					<input type="text" class="form-control" placeholder="닉네임" aria-label="First name" />
